# flask-jwt-authentication

./: app.py  config.py  extensions.py  manage.py  pyproject.toml
api/: views.py
api/resources/: user.py
api/schemas/: user.py
auth/: helpers.py  views.py
migrations/versions/: 0064ad12ec74_.py  2a2c7aaa7c87_.py  2ef4312cf46c_.py  41b7f4c7f120_.py  5afe8b466e71_.py  9c072e79e0fa_initial_migrate.py  ad31a2887f22_.py  f09d02976462_.py
models/: __init__.py  auth.py  users.py
